--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "weather-cli",
   "version": "1.0.0",
   "description": "CLI for getting weather",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "start": "nnode index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +22,11 @@
     "url": "git.com/fialkopavel"
   },
   "bugs": {
-    "url": "git.com/fialkopavel",
     "email": "fialkopavel@gmail.com"
+  },
+  "dependencies": {
+    "axios": "^1.2.1",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
